[gd_scene load_steps=53 format=2]

[ext_resource path="res://Char Sprites/Ucup_Sprite_Sheet_Full_360NF6.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Char Sprites/Ucup/Ucup Sprite-Sheet_Nu4 (360)-min.png" type="Texture" id=4]
[ext_resource path="res://Player/BambooHitbox.gd" type="Script" id=5]
[ext_resource path="res://Char Sprites/MediumShadow.png" type="Texture" id=6]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.2538
height = 33.9033

[sub_resource type="Animation" id=25]
resource_name = "AttackDown"
length = 0.7
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BambooSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/BambooHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=32]
resource_name = "AttackDown2"
length = 0.5

[sub_resource type="Animation" id=33]
resource_name = "AttackDown3"
length = 0.4

[sub_resource type="Animation" id=26]
resource_name = "AttackL"
length = 0.7
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BambooSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 80, 81, 82, 83, 84, 85 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/BambooHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=27]
resource_name = "AttackL2"
length = 0.4

[sub_resource type="Animation" id=28]
resource_name = "AttackL3"
length = 0.5

[sub_resource type="Animation" id=29]
resource_name = "AttackR"
length = 0.7
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BambooSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52, 53 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/BambooHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=30]
resource_name = "AttackR2"
length = 0.4

[sub_resource type="Animation" id=31]
resource_name = "AttackR3"
length = 0.5

[sub_resource type="Animation" id=34]
resource_name = "AttackUp"
length = 0.7
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BambooSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 64, 65, 66, 67, 68, 69 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 270.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/BambooHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=35]
resource_name = "AttackUp2"
length = 0.6

[sub_resource type="Animation" id=36]
resource_name = "AttackUp3"
length = 0.4

[sub_resource type="Animation" id=9]
resource_name = "IdleDown"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BambooSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 96, 97, 98, 99, 100 ]
}

[sub_resource type="Animation" id=6]
resource_name = "IdleLeft"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BambooSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 117, 118, 119, 120, 121 ]
}

[sub_resource type="Animation" id=7]
resource_name = "IdleRight"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BambooSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 101, 102, 103, 104, 105 ]
}

[sub_resource type="Animation" id=8]
resource_name = "IdleUp"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BambooSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 112, 113, 114, 115, 116 ]
}

[sub_resource type="Animation" id=2]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DefaultSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11, 12, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BambooSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/BambooHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
resource_name = "RunDown"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DefaultSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11, 12, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BambooSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=5]
resource_name = "RunLeft"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DefaultSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 45, 46, 47, 48, 49, 50, 51, 44 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BambooSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=3]
resource_name = "RunRight"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DefaultSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23, 24, 25, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BambooSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=4]
resource_name = "RunUp"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DefaultSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 30 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BambooSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="AnimationNodeAnimation" id=48]
animation = "AttackDown"

[sub_resource type="AnimationNodeAnimation" id=49]
animation = "AttackUp"

[sub_resource type="AnimationNodeAnimation" id=50]
animation = "AttackR"

[sub_resource type="AnimationNodeAnimation" id=51]
animation = "AttackL"

[sub_resource type="AnimationNodeBlendSpace2D" id=45]
blend_point_0/node = SubResource( 48 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 49 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 50 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 51 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=15]
blend_point_0/node = SubResource( 11 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 12 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 13 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 14 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "RunDown"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "RunUp"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "RunRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=20]
blend_point_0/node = SubResource( 16 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 17 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 18 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 19 )
blend_point_3/pos = Vector2( 1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]

[sub_resource type="AnimationNodeStateMachineTransition" id=47]

[sub_resource type="AnimationNodeStateMachineTransition" id=52]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=21]
states/BambooAttack/node = SubResource( 45 )
states/BambooAttack/position = Vector2( 118.833, 210.509 )
states/Idle/node = SubResource( 15 )
states/Idle/position = Vector2( 117.666, 111.643 )
states/Run/node = SubResource( 20 )
states/Run/position = Vector2( 283, 111.593 )
transitions = [ "Idle", "Run", SubResource( 23 ), "Run", "Idle", SubResource( 44 ), "Idle", "BambooAttack", SubResource( 47 ), "BambooAttack", "Idle", SubResource( 52 ) ]
start_node = "Idle"
graph_offset = Vector2( -275.5, 56.5387 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=22]

[sub_resource type="CapsuleShape2D" id=53]
radius = 64.0
height = 180.0

[sub_resource type="CapsuleShape2D" id=54]
radius = 32.0
height = 72.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 17
script = ExtResource( 2 )

[node name="shadow" type="Sprite" parent="."]
scale = Vector2( 3, 2 )
texture = ExtResource( 6 )

[node name="DefaultSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -55.0408 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
hframes = 52
frame = 23

[node name="BambooSprite" type="Sprite" parent="."]
position = Vector2( -0.0223932, -55.0667 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
hframes = 16
vframes = 12
frame = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AttackDown = SubResource( 25 )
anims/AttackDown2 = SubResource( 32 )
anims/AttackDown3 = SubResource( 33 )
anims/AttackL = SubResource( 26 )
anims/AttackL2 = SubResource( 27 )
anims/AttackL3 = SubResource( 28 )
anims/AttackR = SubResource( 29 )
anims/AttackR2 = SubResource( 30 )
anims/AttackR3 = SubResource( 31 )
anims/AttackUp = SubResource( 34 )
anims/AttackUp2 = SubResource( 35 )
anims/AttackUp3 = SubResource( 36 )
anims/IdleDown = SubResource( 9 )
anims/IdleLeft = SubResource( 6 )
anims/IdleRight = SubResource( 7 )
anims/IdleUp = SubResource( 8 )
anims/RESET = SubResource( 2 )
anims/RunDown = SubResource( 10 )
anims/RunLeft = SubResource( 5 )
anims/RunRight = SubResource( 3 )
anims/RunUp = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 21 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 22 )
parameters/BambooAttack/blend_position = Vector2( -0.00172412, -0.00953758 )
parameters/Idle/blend_position = Vector2( -0.00172412, -0.0042969 )
parameters/Run/blend_position = Vector2( 0.000574708, 0.00317907 )

[node name="HitboxPivot" type="Position2D" parent="."]
position = Vector2( 0, -55 )
__meta__ = {
"_gizmo_extents_": 60.0
}

[node name="BambooHitbox" parent="HitboxPivot" instance=ExtResource( 3 )]
position = Vector2( 60, 0 )
scale = Vector2( 0.5, 0.5 )
collision_mask = 8
script = ExtResource( 5 )

[node name="CollisionShape2D" parent="HitboxPivot/BambooHitbox" index="0"]
shape = SubResource( 53 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, -55 )
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 54 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="HitboxPivot/BambooHitbox"]
[editable path="Hurtbox"]
